# agentic-design-patterns-autogen

./: README.md  pyproject.toml
